--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,8 @@ matrix:
     - osx_image: xcode9.3
       env: DEVICE=11.3
 
-    # TODO: uncomment once Travis 9.4 VMs have iOS 11.3 SDK installed
-    # - osx_image: xcode9.4
-    #   env: DEVICE=11.3
+    - osx_image: xcode9.4
+      env: DEVICE=11.3
     - osx_image: xcode9.4
       env: DEVICE=11.4
 script:
