--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ matrix:
       env: DEVICE=11.3
     - osx_image: xcode9.4
       env: DEVICE=11.4
+before_script:
+  - xcrun simctl list runtimes
+  - xcrun simctl list devicetypes
 script:
   - npm test && _FORCE_LOGS=1 npm run mocha -- -R spec build/test/**/*-e2e-specs.js
 after_success:
